fixed bug with navbar on mobile. Fixed scaling issues on mobile for home and about me component. Finished styling Home and About Me components.

--- a/src/styles/base/_base.scss
+++ b/src/styles/base/_base.scss
@@ -4,6 +4,10 @@
   padding: 0;
 }
 
+.top-padding {
+  padding-top: 90px;
+}
+
 .custom-section {
   padding-top: 90px;
   width: 100%;
